--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,12 @@
           <a [routerLink]="link.path" (click)="closeMobileMenu()">{{ link.label }}</a>
         </li>
       }
+      <li>
+        <a href="mailto:eduard.mass&#64;hotmail.com" class="contact-button" (click)="closeMobileMenu()">
+          <span class="button-text">Diga Olá</span>
+          <span class="button-icon">👋</span>
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
