--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -3,6 +3,6 @@
   <div #heroTitle class="hero-title-central">
     <h1 #heroName>Eduardo Barreto</h1>
     <h2 #heroSubtitle>Desenvolvedor Front-End | Especialista Angular | UI/UX Enthusiast</h2>
-    <a href="#conclusion" class="cta-button" #ctaButton>Vamos Conversar</a>
+    <!-- <a href="#conclusion" class="cta-button" #ctaButton>Vamos Conversar</a> -->
   </div>
 </div>
