--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -22,8 +22,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
-  opacity: 0;
+  z-index: 10; /* Aumentado para ficar na frente */
+  opacity: 1;
   transition: opacity 0.5s ease;
   transform: scale(1);
   image-rendering: -webkit-optimize-contrast;
