--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <app-header />
 <main>
+  <section id="title">
+    <app-title />
+  </section>
   <section id="hero">
     <app-hero />
   </section>
