--- a/src/app/blog/blog-post/blog-post.component.html
+++ b/src/app/blog/blog-post/blog-post.component.html
@@ -1,6 +1,13 @@
 <div class="post-container">
   <div *ngIf="isLoading; else content" class="loading-state">
-    <p>Carregando...</p>
+    <div class="loading-container">
+      <div class="loading-spinner">
+        <div class="spinner-ring"></div>
+        <div class="spinner-ring"></div>
+        <div class="spinner-ring"></div>
+      </div>
+      <div class="loading-text">Carregando artigo...</div>
+    </div>
   </div>
 
   <ng-template #content>
