refactor: ajustar textos da interface
- Alterar botão 'Contratar' para 'Contatar' no componente cabin
- Atualizar copyright para 2025 e reorganizar texto do footer

--- a/src/app/cabin/cabin.component.html
+++ b/src/app/cabin/cabin.component.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="cta-buttons">
-          <button class="btn-primary" (click)="scrollToContact()">Contratar</button>
+          <button class="btn-primary" (click)="scrollToContact()">Contatar</button>
           <button class="btn-secondary" (click)="scrollToPortfolio()">Ver Portfolio</button>
         </div>
       </div>
