--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-content">
-    <p>Desenvolvido por Eduardo Barreto</p>
-    <p>© 2024. Todos os direitos reservados.</p>
+    <p>Desenvolvido por Eduardo Barreto
+    © 2025. Todos os direitos reservados.</p>
   </div>
 </footer>
